test_suite/tests/ui/malformed/not_list.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde]
#[serde = "?"]
struct S;

fn main() {}
